[package]
name = "todo_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.17.0"
ic-cdk-macros = "0.16.0"
candid = "0.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
