[package]
name = "todo_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.16"
ic-cdk-macros = "0.17.1"
candid = "0.10.4"
serde = "1.0.217"
serde_json = "1.0.138"
ic-cdk-timers = "0.10"
